2006-06-29  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* CSharpBinding.mdp:
	* Makefile.am:
	* CSharpEnhancedCodeProvider.cs:
	New file, implements CodeDom methods CreateParser and Parse.
	
	* CSharpLanguageBinding.cs: Use new CSharpEnhancedCodeProvider.
	
	* CSharpBinding.addin.xml: Bump version so that AspNetAddIn can take 
	a dependency on the CodeProvider's CreateParser method.

2006-06-15 Scott Ellington  <scott.ellington@gmail.com>

	* Autotools/CSharpAutotoolsSetup.cs:
	
2006-06-15 Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.addin.xml: Use the DataType element instead fof Class
	  to declare serializable types.

2006-06-07 Scott Ellington  <scott.ellington@gmail.com>

	* CSharpBinding.addin.xml:
	* Autotools/CSharpAutotoolsSetup.cs:
	* Autotools/Makefile.am:
	* Makefile.am:
	Add optional module for implementing simple autotools support

2006-05-22 Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/Parser.cs:
	* Parser/CSharpVisitor.cs: 
	* Parser/Resolver.cs:
	* Parser/TypeVisitor.cs:
	* Parser/CodeGenerator.cs:
	* Parser/LanguageItemVisitor.cs:
	* Parser/ExpressionFinder.cs:
	* Parser/SharpDevelopTree/Destructor.cs:
	* Parser/SharpDevelopTree/Indexer.cs:
	* Parser/SharpDevelopTree/Method.cs:
	* Parser/SharpDevelopTree/Event.cs:
	* Parser/SharpDevelopTree/ReturnType.cs:
	* Parser/SharpDevelopTree/Field.cs:
	* Parser/SharpDevelopTree/Property.cs:
	* Parser/SharpDevelopTree/Class.cs:
	* Parser/SharpDevelopTree/Constructor.cs:
	* parse.cs:
	* Makefile.am: Use the new NRefactory library.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.addin.xml: Updated versions.
	* CSharpBinding.mdp: Updated.

2006-04-24 Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Fix nullref caused by delegates not having
	  a region or bodyRegion. Fixes bug #78143.

2006-04-21 Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpLanguageBinding.cs: Implement GetSupportedClrVersions.