@@ -5,19 +5,19 @@
        url         = "http://www.monodevelop.com/"
        description = "CSharp Language Binding"
 	   category    = "Language bindings"
-       version     = "0.9">
+       version     = "0.10">
 	
 	<Runtime>
 		<Import assembly = "CSharpBinding.dll"/>
 	</Runtime>
 
 	<Dependencies>
-	    <AddIn id="MonoDevelop.Core" version="0.10.0"/>
-	    <AddIn id="MonoDevelop.Core.Gui" version="0.10.0"/>
-    	<AddIn id="MonoDevelop.Projects" version="0.11.0"/>
-		<AddIn id="MonoDevelop.Projects.Gui" version="0.10.0"/>
-		<AddIn id="MonoDevelop.Ide" version="0.10.0"/>
-		<AddIn id="MonoDevelop.SourceEditor" version="0.10.0"/>
+	    <AddIn id="MonoDevelop.Core" version="0.12.0"/>
+	    <AddIn id="MonoDevelop.Core.Gui" version="0.12.0"/>
+    	<AddIn id="MonoDevelop.Projects" version="0.12.0"/>
+		<AddIn id="MonoDevelop.Projects.Gui" version="0.12.0"/>
+		<AddIn id="MonoDevelop.Ide" version="0.12.0"/>
+		<AddIn id="MonoDevelop.SourceEditor" version="0.12.0"/>
 	</Dependencies>
 	
 	<Extension path = "/SharpDevelop/Workbench/Ambiences">
