@@ -1,3 +1,12 @@
+2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* CSharpLanguageBinding.cs:
+	* CSharpBindingCompilerManager.cs: Track changes in ProjectReference.
+	  Removed obsolete GenerateMakefile method.
+	* Parser/CodeGenerator.cs: Fix member reference location.
+	* Parser/ExpressionFinder.cs: Fix warning.
+	* CSharpBinding.addin.xml: Updated versions.
+
 2006-06-29  Michael Hutchinson <m.j.hutchinson@gmail.com>
 
 	* CSharpBinding.mdp:
